--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,49 @@
-Django>=5.2,<5.3
-wagtail>=7.2
-psycopg2-binary>=2.9
-Pillow>=10.0
-django-extensions>=3.2
-python-decouple>=3.8
-gunicorn>=21.2
-whitenoise>=6.6
-requests>=2.31
-django-htmx>=1.17
-django-ratelimit>=4.1
+anyascii==0.3.3
+asgiref==3.10.0
+beautifulsoup4==4.12.3
+certifi==2025.10.5
+charset-normalizer==3.4.4
+defusedxml==0.7.1
+Django==5.2.8
+django-debug-toolbar==6.0.0
+django-extensions==4.1
+django-filter==23.5
+django-htmx==1.26.0
+django-modelcluster==6.4
+django-permissionedforms==0.1
+django-ratelimit==4.1.0
+django-stubs-ext==5.2.7
+django-taggit==5.0.1
+django-tasks==0.8.1
+django-treebeard==4.7.1
+djangorestframework==3.16.1
+draftjs_exporter==5.1.0
+et_xmlfile==2.0.0
+feedparser==6.0.12
+filetype==1.2.0
+gunicorn==23.0.0
+html5lib==1.1
+idna==3.11
+l18n==2021.3
+laces==0.1.2
+modelsearch==1.1
+openpyxl==3.1.5
+packaging==25.0
+pillow==10.4.0
+pillow_heif==0.22.0
+psycopg2-binary==2.9.11
+python-decouple==3.8
+pytz==2025.2
+requests==2.32.5
+sgmllib3k==1.0.0
+six==1.17.0
+soupsieve==2.8
+sqlparse==0.5.3
+telepath==0.3.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+wagtail==7.2
+wagtail-seo==3.1.1
+webencodings==0.5.1
+whitenoise==6.11.0
+Willow==1.11.0
